Working with Forms, article 11

--- a/11-mainEvents/index.html
+++ b/11-mainEvents/index.html
@@ -8,5 +8,7 @@
     </head>
     <body>
         <script type="module" src="index.js"></script>
+        <button id="red">Red</button>
+        <button id="green">Green</button>
     </body>
 </html>
